hw04-corrected: portfolio - focus, footer; customer - gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -488,7 +488,6 @@ button {
   gap: 24px;
   justify-content: center;
   align-items: center;
-  margin-bottom: 124px;
 }
 
 .clients-item {
@@ -532,7 +531,6 @@ button {
 .footer-box {
   display: flex;
   align-items: baseline;
-  gap: 120px;
 }
 
 .footer-logo-box {
@@ -721,19 +719,25 @@ button {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* .filters-link:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
+} */
+
+
+
+.filters-link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .filters-link:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
   transform: translateY(0%);
-}
-
-
-
-.filters-item:hover {
-  border: 1px solid var(--cloud, #F4F4FD);
-  background: var(--white, #FFF);
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .filters-item:hover .overlay {
